# nivas

./: .env.example  .gitignore  README.md  docker-compose.yml  raw_todos.json
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  scheduler.py  sync_status.py  utils.py  ws.py
backend/app/integrations/: alexa_lists.py  google_calendar.py  icloud_reminders.py  recipe_ai.py
backend/app/routers/: calendar.py  chores.py  meals.py  photos.py  recipes.py  rewards.py  setup.py  shopping.py  tasks.py  weather.py
backend/app/services/: merge.py  sync.py
backend/family_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/static/: index.html  manifest.json
backend/static/assets/: index-0YFqkAPP.css  index-0jdfrSpP.css  index-504DQxdX.js  index-5l3hTcsL.js  index-5uf6OzeU.css  index-6GXyYwEl.css  index-9aQQ_nLP.js  index-A2HwRui_.css  index-AH9x9HaC.js  index-B0-hNmzp.js  index-B0fEmg3e.js  index-B0ykccPa.js  index-B3JsR5xP.js  index-B4ylaoPF.js  index-B50-wz_7.css  index-B5v0sdU2.css  index-B6Ln2YWB.js  index-B6ilCbE-.js  index-B9CIG7Lq.js  index-B9SVSND-.js  index-BBZRCPn0.css  index-BBgtB5Np.js  index-BBhs_L8r.js  index-BDrFKRrv.css  index-BEbkpYxZ.js  index-BFfZ2vrx.js  index-BFuD8NUN.css  index-BFv2b46X.css  index-BITEz8im.js  index-BI_9g0LB.js  index-BKTZSTgu.js  index-BMIr6Q3F.css  index-BN1EuQWD.js  index-BOcmRicb.js  index-BOfL4HK1.js  index-BPNKpE30.css  index-BQuEukO6.css  index-BS-5cC2I.js  index-BSsOL-6a.css  index-BV8R8uKG.css  (+206 more)
backend/tests/: test_chores.py  test_cleanup.py  test_merge.py  test_recipe_ai.py
(+42 files in other folders)
