[project]
name = "family-dashboard"
version = "0.1.0"
description = "Family dashboard hub backend: calendar, chores, shopping, meals, recipes"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "apscheduler>=3.10,<4",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "google-api-python-client>=2.130",
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
    "pyicloud>=1.0",
    "alexapy>=1.29",
    "recipe-scrapers>=15.0",
    "google-genai>=1.0",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
packages = { find = { include = ["app*"] } }
